--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,12 @@ body {
     max-height: 100%;
     height: 100%;
     width: 100%;
-    background: url('../images/bg-transparent.png'), linear-gradient(#150D1F, #150D36);
+    background: linear-gradient( 90deg, rgba(21, 13, 31, 0.75) 0%, rgba(21,13,54, 0.75) 100%), url('../images/app-background.png');
+    // background: url('../images/bg-transparent.png');
+    // background-color: linear-gradient( 90deg, rgba(21, 13, 31, 0.75) 0%, rgba(21,13,54, 0.75) 100%);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     color: $typography-1;
     overflow: hidden;
     font-family: 'Ubuntu', sans-serif;
