--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ body {
     max-height: 100%;
     height: 100%;
     width: 100%;
-    background: linear-gradient( 90deg, rgba(21, 13, 31, 0.75) 0%, rgba(21,13,54, 0.75) 100%), url('../images/app-background.png');
+    background: linear-gradient( 90deg, rgba(18, 31, 41, 0.75) 0%, rgba(32, -15, 118, 0.75) 100%), url('../images/app-background.png');
     // background: url('../images/bg-transparent.png');
     // background-color: linear-gradient( 90deg, rgba(21, 13, 31, 0.75) 0%, rgba(21,13,54, 0.75) 100%);
     background-position: center;
