Background colour change

--- a/src/components/serverbrowser/serverbrowser.component.scss
+++ b/src/components/serverbrowser/serverbrowser.component.scss
@@ -7,7 +7,8 @@
     height: 100vh;
     width: 70px;
     border-right: 1px solid #3b2f61;
-    background-color: #2a1c47;
+    background-color: #2A1C47;
+    //background-color: rgba(100, 79, 139, 0.25);
     .serverBrowser__icon {
         margin: 7px auto;
         height: 60px;
