--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,9 @@ body {
     max-height: 100%;
     height: 100%;
     width: 100%;
-    background: linear-gradient( 180deg, rgba(21, 13, 54, 0.75) 0%, rgba(21, 13, 31, 0.75) 100%), url('../images/app-background.png');
+    background: linear-gradient(90deg, rgba(31, 6, 71, 0.9) 0%, rgba(18, 4, 71, 0.9) 100%), url('../images/bg-nottransparent.png');
+    //background: linear-gradient(180deg, rgba(21, 13, 31, 0.9) 0%, rgba(46, 44, 82, 0.9) 50%, rgba(21, 13, 54, 0.9) 100%), url('../images/bg-nottransparent.png');
+    
     
     // background: url('../images/bg-transparent.png');
     background-position: center;
