--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -57,6 +57,7 @@
         float: right;
         margin-top: 15px;
         max-width: 100%;
+        -webkit-app-region: no-drag;
         ul {
             display: inline-flex;
             li {
