--- a/src/pages/profile/profile.style.scss
+++ b/src/pages/profile/profile.style.scss
@@ -18,12 +18,13 @@
                 .avatar {
                     float: left;
                     img {
-                        width: 120px;
-                        height: 120px;
+                        width: 100px;
+                        height: 100px;
                         float: inherit;
                         border-radius: 100%;
                         border: 2px solid $palace-gold;
                         box-shadow: 0px 0px 20px 1px rgb(0, 0, 0);
+                        margin-left: 20px;
                     }
                 }
                 .info {
@@ -31,38 +32,61 @@
                     float: left;
                     position: absolute;
                     margin-left: 50px;
+                    margin-top: 5px;
                     h1 {
-                        font-size: 40px;
+                        font-size: 30px;
                         font-family: "Ubuntu";
                         color: rgb(245, 245, 245);
                         font-weight: bold;
                         position: absolute;
                         padding: 0px;
                         left: 100px;
+                        top: 10px;
                     }
                     .rank_area {
                         left: 220px;
                         position: relative;
-                        margin-top: 5px;
+                        margin-top: 10px;
                         p.rank {
-                            height: 20px;
-                            line-height: 20px;
+                            height: 15px;
+                            line-height: 15px;
                             color: #fff;
-                            font-size: 12px;
+                            font-size: 10px;
                             text-shadow: 0 1px 1px rgba(0 ,0, 0, 0.4);
                             padding: 0 12px;
                             margin: 10px 5px 0 5px;
                             background: #00AAAA;
                             float: left;
                             border-radius: 5px;
+                            &.premium {
+                                color: rgb(0, 234, 255);
+                                background-color: rgba(0, 234, 255, 0.38);    
+                            }
+                            &.admin {
+                                color: rgb(192, 45, 45);
+                                background-color: rgba(192, 45, 45, 0.38); 
+                            }
+                            &.staff {
+                                color: rgb(211, 190, 45);
+                                background-color: rgba(211, 190, 45, 0.38);
+                            }
+                            &.online {
+                                color: rgb(0, 150, 0);
+                                background-color: rgba(0, 150, 0, 0.38);
+                            }
+                            &.watchdog {
+                                color: rgb(71, 230, 67);
+                                background-color: rgba(71, 230, 67, 0.38);
+                            }
                         }
                     }
                     p.member_since {
+                        font-size: 14px;
                         height: 20px;
                         line-height: 33px;
                         float: left;
                         position: absolute;
-                        margin-top: 33px;
+                        margin-top: 25px;
                         left: 70px;
                     }
                 }
@@ -77,9 +101,9 @@
                 position: absolute;
                 //border: 2px dashed pink;
                 height: 60px;
-                width: 900px;
+                width: 840px;
                 left: -60px;
-                margin: 18px 0 18px 220px;
+                margin: 28px 0 28px 220px;
                // background: green;
                 .stats {
                     list-style: none;
@@ -184,8 +208,64 @@
                     }
                 }
             }
+            .user_tools_area {
+                position: absolute;
+                //border: 2px dashed pink;
+                height: 60px;
+                width: 400px;
+                left: 745px;
+                margin: 28px 0 28px 220px;
+                // background: green;
+                .user_tools {
+                    list-style: none;
+                    display: flex;
+                    flex-flow: row nowrap;
+                    justify-content: space-around;
+                    align-content: center;
+                    li {
+                    //border: 2px solid white;
+                    border-radius: 10px;
+                    background-color: rgba(0, 234, 255, 0);
+                    position: relative;
+                    width: 100px;
+                    height: 40px;
+                    &.tool_addFriend {
+                        border: 2px solid rgba(0, 234, 255, 0.8);
+                        background-color: rgba(0, 234, 255, 0.38);
+                    }
+                    &.tool_message {
+                        border: 2px solid rgba(71, 230, 67, 0.8);;
+                        background-color: rgba(71, 230, 67, 0.38);
+                    }
+                    &.tool_report {
+                        border: 2px solid rgba(192, 45, 45, 0.8);
+                        background-color: rgba(192, 45, 45, 0.38);
+                    }
+                    .tool {
+                        width: 100px;
+                        height: 40px;
+                        text-align: center;
+                        line-height: 2;
+                        a {
+                            font-weight: normal;
+                            pointer-events: none;
+                            font-size: 12px;
+                            text-transform: uppercase;
+                            &.tool_addFriend_text {
+                                color: rgba(0, 234, 255, 0.8);
+                            }
+                            &.tool_message_text {
+                                color:rgba(71, 230, 67, 0.8);
+                            }
+                            &.tool_report_text {
+                                color:rgba(192, 45, 45, 0.8);
+                            }
+                        }
+                    }
+                    }
+                }
+
+            }
         }
     }
 }
-  
-  
