--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,7 +15,7 @@ body {
     width: 100%;
     background: linear-gradient(90deg, rgba(22, 4, 51, 0.9) 0%, rgba(14, 3, 53, 0.9) 100%), url('../images/bg-nottransparent.png');
     //background: linear-gradient(180deg, rgba(21, 13, 31, 0.9) 0%, rgba(46, 44, 82, 0.9) 50%, rgba(21, 13, 54, 0.9) 100%), url('../images/bg-nottransparent.png');
-    -webkit-app-region: drag;
+    -webkit-app-region: no-drag;
     
     // background: url('../images/bg-transparent.png');
     background-position: center;
