Move Social Bar down on Chat Page

--- a/src/components/socialnavigation/socialnavigation.component.scss
+++ b/src/components/socialnavigation/socialnavigation.component.scss
@@ -9,6 +9,7 @@
         height: 67px;
         width: 100%;
         border-bottom: 1px solid $color-borders-main;
+        border-top: 1px solid $color-borders-main;
         padding: 12px 20px;
         span {
             font-size: 27px;
