--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -96,6 +96,7 @@
         position: relative;
         display: inline-flex;
         max-width: 100%;
+        left: 85px;
         button {
             height: 65px;
             width: 65px;
@@ -116,6 +117,7 @@
         position: relative;
         padding: 10px 4px;
         max-width: 100%;
+        left: 85px;
         .avatar {
             position: relative;
             top: 8px;
