Added Custom MacOS Traffic Lights

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -4,3 +4,21 @@ $color-borders-main: #38304F;
 $color-borders-alt: #FFE824;
 $typography-1: rgb(245, 245, 245);
 $typography-2: #938DA6;
+
+//MACOS TRAFFIC LIGHT COLORS
+$close-red: #ff6159;
+$close-red-active: #bf4942;
+$close-red-icon: #4d0000;
+$close-red-icon-active: #190000;
+
+$minimize-yellow: #ffbd2e;
+$minimize-yellow-active: #bf8e22;
+$minimize-yellow-icon: #995700;
+$minimize-yellow-icon-active: #592800;
+
+$maximize-green: #28c941;
+$maximize-green-active: #1d9730;
+$maximize-green-icon: #006500;
+$maximize-green-icon-active: #003200;
+
+$disabled-gray: #ddd;
