--- a/src/components/serverbrowser/serverbrowser.component.scss
+++ b/src/components/serverbrowser/serverbrowser.component.scss
@@ -10,7 +10,8 @@
     background-color: #2A1C47;
     //background-color: rgba(100, 79, 139, 0.25);
     .serverBrowser__icon {
-        margin: 7px auto;
+        margin: 0 auto;
+        margin-top: -16px;
         height: 60px;
         width: 100%;
         padding: 7px 7px;
@@ -49,6 +50,121 @@
                 border: 1px solid $palace-gold;
                 box-shadow: 0px 1px 10px rgb(255, 232, 36);
             }
+        }
+    }
+}
+
+.traffic-lights {
+    margin-left: 10px;
+    margin-top: -1px;
+
+    .macButtons &, &:hover, &:active {
+        > .traffic-light-close {
+            background-color: $close-red;
+
+            &:active:hover {
+                background-color: $close-red-active;
+            }
+        }
+        > .traffic-light-minimize {
+            background-color: $minimize-yellow;
+
+            &:active:hover {
+                background-color: $minimize-yellow-active;
+            }
+        }
+        > .traffic-light-maximize {
+            background-color: $maximize-green;
+
+            &:active:hover {
+                background-color: $maximize-green-active;
+            }
+        }
+    }
+
+    > .traffic-light {
+        &:before, &:after {
+            visibility: hidden;
+        }
+    }
+
+    &:hover, &:active {
+        > .traffic-light {
+            &:before, &:after {
+                visibility: visible;
+            }
+        }
+    }
+}
+
+.traffic-light {
+    border-radius: 100%;
+    padding: 0;
+    height: 12px;
+    width: 12px;
+    border: 1px solid rgba(0, 0, 0, 0.06);
+    box-sizing: border-box;
+    margin-right: 4.5px;
+    background-color: $disabled-gray;
+    position: relative;
+    outline: none;
+
+    &:before, &:after {
+        content: '';
+        position: absolute;
+        border-radius: 1px;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+
+    &-close {
+        &:before, &:after {
+            background-color: $close-red-icon;
+            width: 8px;
+            height: 1px;
+        }
+        &:before {
+            transform: rotate(45deg);
+        }
+        &:after {
+            transform: rotate(-45deg);
+        }
+        &:active:hover:before, &:active:hover:after {
+            background-color: $close-red-icon-active;
+        }
+    }
+
+    &-minimize {
+        &:before {
+            background-color: $minimize-yellow-icon;
+            width: 8px;
+            height: 1px;
+        }
+        &:active:hover:before {
+            background-color: $minimize-yellow-icon-active;
+        }
+    }
+
+    &-maximize {
+        &:before {
+            background-color: $maximize-green-icon;
+            width: 6px;
+            height: 6px;
+        }
+        &:after {
+            background-color: $maximize-green;
+            width: 10px;
+            height: 2px;
+            transform: rotate(45deg);
+        }
+        &:active:hover:before {
+            background-color: $maximize-green-icon-active;
+        }
+        &:active:hover:after {
+            background-color: $maximize-green-active;
         }
     }
 }
