--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -44,6 +44,17 @@ body {
         outline: 0;
     }
 }
+.windowsTitleBar {
+    display: inline-flex;
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    padding: 5px 10px;
+    height: 30px;
+    background-color: #1C1148;
+}
 // .app__wrapper {
 //     position: absolute;
 //     top: 0;
