--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,14 +41,30 @@ body {
 }
 .windowsTitleBar {
     display: inline-flex;
-    max-width: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
+    width: 100%;
+    z-index: 999;
+    position: relative !important;
     padding: 5px 10px;
     height: 30px;
     background-color: #1C1148;
+    .windowControls {
+        margin-left: auto;
+        ul {
+            display: inline-flex;
+            li {
+                list-style-type: none;
+                margin-top: 1px;
+                padding: 1px 9px;
+                font-size: 15px;
+            }
+        }
+    }
+}
+.wrapper {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 // .app__wrapper {
 //     position: absolute;
