Adjusted bg color to be less harsh

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,7 +46,7 @@ body {
     position: relative !important;
     padding: 5px 10px;
     height: 30px;
-    background-color: #1C1148;
+    background-color: #1E193E;
     .windowControls {
         margin-left: auto;
         ul {
