--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -44,18 +44,25 @@ body {
     width: 100%;
     z-index: 999;
     position: relative !important;
-    padding: 5px 10px;
+    padding: 2px 0px;
     height: 30px;
-    background-color: #1E193E;
+    background-color: 232131;
     .windowControls {
         margin-left: auto;
         ul {
             display: inline-flex;
             li {
                 list-style-type: none;
-                margin-top: 1px;
-                padding: 1px 9px;
+                padding: 4px 10px;
                 font-size: 15px;
+                &:hover {
+                    background-color: rgb(35, 33, 49);
+                }
+                &:nth-child(3) {
+                    &:hover {
+                        background-color: rgb(255, 66, 66);
+                    }
+                }
             }
         }
     }
