--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -44,7 +44,7 @@ body {
     width: 100%;
     z-index: 999;
     position: relative !important;
-    padding: 0px 10px;
+    padding: 0px 10px !important;
     height: 30px;
     background-color: 232131;
     .windowControls {
