--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,33 +39,44 @@ body {
         outline: 0;
     }
 }
-.windowsTitleBar {
+.windowsTitlebar {
     display: inline-flex;
     width: 100%;
     z-index: 999;
     position: relative !important;
     padding: 0px !important;
     height: 30px;
-    background-color: 232131;
+    background-color: rgb(29, 19, 68);
     .windowControls {
         margin-left: auto;
-        ul {
-            display: inline-flex;
-            li {
-                list-style-type: none;
-                padding: 4px 15px;
-                font-size: 15px;
-                &:hover {
-                    background-color: rgb(35, 33, 49);
-                }
-                &:nth-child(3) {
-                    &:hover {
-                        background-color: rgb(255, 66, 66);
-                    }
-                }
-            }
+        display: inline-flex;
+        .controlButton {
+            padding: 4px 15px;
+            font-size: 15px;
+            background-color: transparent;
+            border-color: transparent;
+            color: rgb(150, 150, 150);
         }
     }
+    // .windowControls {
+    //     margin-left: auto;
+    //     ul {
+    //         display: inline-flex;
+    //         li {
+    //             list-style-type: none;
+    //             padding: 4px 15px;
+    //             font-size: 15px;
+    //             &:hover {
+    //                 background-color: rgb(35, 33, 49);
+    //             }
+    //             &:nth-child(3) {
+    //                 &:hover {
+    //                     background-color: rgb(255, 66, 66);
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 }
 .wrapper {
     height: 100%;
