--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -45,17 +45,6 @@
 // 		width: 400px;
 // 	}
 // }
-.windowsTitleBar {
-    display: inline-flex;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    padding: 5px 10px;
-    height: 30px;
-    background-color: #1C1148;
-}
 .header {
     display: inline-flex;
     margin: 0 auto;
@@ -63,6 +52,7 @@
     width: 100%;
     height: 67px;
     border-bottom: 1px solid $color-borders-main;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
     nav {
         position: relative;
         float: right;
@@ -92,6 +82,17 @@
         color: $palace-gold;
         text-shadow: 1px 0.5px 5px $palace-gold;
     }
+    .separator {
+        position: relative;
+        margin-top: 19px;
+        height: 30px;
+        border-left:1px solid #38304F;
+    }
+    .separator--horizontal {
+        position: relative;
+        border-top: 1px solid #38304F;
+        width: 30px;
+    }
     .header__search {
         position: relative;
         margin: 20px auto;
@@ -111,8 +112,8 @@
             height: 65px;
             width: 65px;
             background: transparent;
-            border-top: transparent; border-bottom: transparent;
-            border-left: 1px solid $color-borders-main; border-right: 1px solid $color-borders-main;
+            border-top: transparent; border-bottom: transparent; border-left: transparent; border-right: transparent;
+            // border-left: 1px solid $color-borders-main; border-right: 1px solid $color-borders-main;
             a {
                 font-size: 15px;
                 color: $typography-1;
