--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -299,3 +299,17 @@ button.btn {
     }
   }
 }
+
+.separator {
+  position: relative;
+  margin-top: 15px;
+  height: 30px;
+  border-left:1px solid #38304F;
+}
+.separator--horizontal {
+  &::before {
+    content: " ";
+    display: block;
+    border-bottom: 1px solid #38305F;
+  }
+}
