--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -1,117 +1,106 @@
-* {
-  list-style: none; }
-
-a {
-  text-decoration: none;
-  outline: none;
-  color: #444; }
-
-a:hover {
-  color: #444; }
-
+.no-padding {
+    padding: 0px;
+}
 ::placeholder {
-  color: #747f8a;
-  font-size: 13px;
-  opacity: .5; }
+    color: #747f8a;
+    font-size: 13px;
+    opacity: .5;
+}
 
-body {
-  background-color: #f7f7ff;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #6A6A6A; }
+.btn-success{
+	background-color: #863dd9;
+	border-color: #863dd9;
+	&:hover{
+		background-color: #863dd9;
+		border-color: #863dd9;
+	}
+	&:active{
+		background-color: #863dd9;
+		border-color: #863dd9;
+	}
+	&:focus{
+		background-color: #863dd9;
+		border-color: #863dd9;
+		box-shadow: none;
+	}
+}
+.form-control{
+	&:focus{
+		box-shadow: none;
+		border:2px solid  #863dd9;
+	}
 
-.btn-success {
-  background-color: rgba(235, 34, 144, 0.73);
-  border-color: rgba(235, 34, 144, 0.73); }
-  .btn-success:hover {
-    background-color: #00ab9f;
-    border-color: #00ab9f; }
-  .btn-success:active {
-    background-color: #00ab9f;
-    border-color: #00ab9f; }
-  .btn-success:focus {
-    background-color: #00ab9f;
-    border-color: #00ab9f;
-    box-shadow: none; }
+}
 
-.btn {
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 2px; }
+.form-control:focus{
+	box-shadow: none;
+	border: 2px solid #863dd9;
+}
+.form-control{
+	background-color: #F8F8F8;
+	margin-bottom: 20px;
+	&:focus{
+		background-color: #FFF;
+		border-color: #CCC;
+	}
+}
 
-.form-control:focus {
-  box-shadow: none;
-  border: 2px solid  #00a8df; }
+.side-left{
+    height: 100%;
+    width: calc(100% - 340px);
+    float: left;
+    background: url("../../images/login-background.jpeg");
+    background-size: 100%;
+    .side-row{
+        padding: 70px;
+        color: #FFF;
+        position: absolute;
+        bottom: 0px;
+       
+        p{
+            font-size: .9rem;
+            padding-bottom: 20px;
+             border-bottom: 1px solid #cccccc70;
+        }
+    }
 
-.form-control:focus {
-  box-shadow: none;
-  border: 2px solid #0d7a40; }
-
-.form-control {
-  background-color: #F8F8F8;
-  margin-bottom: 20px; }
-  .form-control:focus {
+}
+.side-right{
     background-color: #FFF;
-    border-color: #CCC; }
-
-.container {
-  max-width: 1100px; }
-  @media screen and (max-width: 575px) {
-    .container {
-      padding: 20px 30px; } }
-
-.login-box {
-  background-color: #FFF;
-  float: none;
-  margin: auto;
-  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
-  border-radius: 5px;
-  margin-top: 8%; }
-
-.login-form {
-  padding: 20px; }
-  .login-form h2 {
-    margin-top: 20px;
-    width: 100%;
-    text-align: center; }
-  .login-form p {
-    width: 100%;
+    height: 100%;
+    width: 340px;
+    float: right;
+    padding: 80px 30px;
     text-align: center;
-    margin-bottom: 20px;
-    margin-top: 10px; }
-  .login-form .text-box-cont {
-    max-width: 300px;
-    float: none;
-    margin: auto; }
-    .login-form .text-box-cont .input-group .input-group-prepend span {
-      background-color: #F8F8F8;
-      border-radius: 0px;
-      border-right: 0px; }
-    .login-form .text-box-cont .input-group .input-group-prepend i {
-      color: #777474; }
-    .login-form .text-box-cont .input-group input {
-      border-left: 0px;
-      border-radius: 0px; }
-    .login-form .text-box-cont .btn {
-      border-radius: 50px;
-      padding: 10px 30px;
-      margin: auto;
-      margin-bottom: 10px;
-      font-size: 13px; }
-
-.side-box {
-  background-color: rgba(235, 34, 144, 0.73);
-  display: flex; }
-  .side-box .no-account {
-    margin: auto;
-    align-items: center;
+    vertical-align: middle;
+    transform: translateY(25%);
+    .logo{
+        width: 200px;
+    }
+    h2{
+        font-size: .8rem;
+        padding: 20px 10px;
+    }
+    .form-row{
+        label{
+            font-size: .8rem;
+        }
+    }
+    .remember{
+        font-size: .8rem;
+        span{
+            float: right;
+        }
+    }
+}
+.login-button{
+    padding: 35px 10px;
     text-align: center;
-    color: #FFF; }
-    .side-box .no-account p {
-      margin-top: 15px; }
-    .side-box .no-account .btn-outline-light {
-      border-radius: 50px;
-      box-shadow: none;
-      padding: 5px 20px;
-      margin-top: 25px; }
-
-.palacec {
-  margin-top: 40px; }
+    .btn{
+        padding: 5px 40px;
+        border-radius: 50px;
+        float: none;
+        margin: auto;
+    }
+   
+}
