--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -52,7 +52,6 @@
     width: 100%;
     height: 67px;
     border-bottom: 1px solid $color-borders-main;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
     nav {
         position: relative;
         float: right;
@@ -97,12 +96,13 @@
         position: relative;
         margin: 20px auto;
         height: 30px;
-        border: 2px solid #38304F;
+        border: 1px solid #38304F;
+        background-color: rgba(0, 0, 0, 0.14);
         width: 300px;
         font-size: 12px;
         color: #938DA6;
         padding: 5px 15px;
-        border-radius: 8px;
+        border-radius: 5px;
     }
     .header__subnav {
         position: relative;
@@ -110,17 +110,17 @@
         max-width: 100%;
         button {
             height: 65px;
-            width: 65px;
+            width: 55px;
             background: transparent;
             border-top: transparent; border-bottom: transparent; border-left: transparent; border-right: transparent;
             // border-left: 1px solid $color-borders-main; border-right: 1px solid $color-borders-main;
             a {
-                font-size: 15px;
-                color: $typography-1;
+                font-size: 17px;
+                color: #a6aaad;
             }
-            &:nth-child(n+2) {
-                margin-left: -1px;
-            }
+            // &:nth-child(n+2) {
+            //     margin-left: -1px;
+            // }
         }
     }
     .header__currentUser {
@@ -158,9 +158,9 @@
 		display: inline-flex;
 		.header__search {
 			position: relative;
-			margin: 15px auto;
-			height: 30px;
-			border: 2px solid #38304F;
+			margin: 20px auto;
+			// height: 30px;
+			// border: 2px solid #38304F;
 			width: 250px;
 		}
 	}
