--- a/src/components/loginform/loginform.component.scss
+++ b/src/components/loginform/loginform.component.scss
@@ -1,145 +1,75 @@
-.user-login {
-  min-height: 100vh;
+@import '../../styles/theme';
 
-  .bs-reset {
-    margin: 0;
+body{
+background-image: url('../../images/login-background.jpg');
+background-size: cover;
+background-repeat: no-repeat;
+font-size: 13px;
+.card{
+  height: 450px;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 425px;
+  background-color: rgba(45, 31, 86, 0.9);
+  .card-header {
+    text-align: center;
+    border: none;
     padding: 0;
-  }
-
-  .text-right {
-    text-align: right;
-  }
-
-  .login-bg {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 100vh;
-  }
-
-  .login-logo {
-    position: absolute;
-    top: 2.5em;
-    left: 2.5em;
-
-    &.login-logo-alt {
-      top: 80px;
-      left: 80px;
+    .verseLogo {
+      max-width: 75%;
+      height: auto;
+    }
+    p {
+      text-transform: uppercase;
     }
   }
-
-  .login-container {
-    position: relative;
-    min-height: 100vh;
-
-    > {
-      .login-content {
-        margin-top: 50%;
-        padding: 0 80px;
-
-        .user-input {
-          width: 50%;
-          position: relative;
-        }
-
-        .left-padding {
-          padding-left: 5px;
-        }
-
-        > .login-form {
-          margin-top: 80px;
-          color: #ffffff;
-          font-size: 13px;
-
-          .form-control {
-            font-size: 15px;
-            color: #ffffff;
-            position: relative;
-            height: 40px;
-            background: none;
-            border: 0;
-            border-bottom: 1px solid #c2cad8;
-            border-radius: 0;
-
-            &:focus {
-                box-shadow: none;
-            }
-            &::placeholder {
-              color: #ffffff;
-              opacity: 0.8;
-            }
-          }
-
-          .forgot-password, .login-button {
-            display: inline-block;
-          }
-
-          .forgot-password {
-            margin-right: 1em;
-
-            > a {
-              color: #ffffff;
-
-              &:focus {
-                color: #a4aab2;
-                text-decoration: none;
-              }
-            }
-          }
-        }
-      }
+  .card-body {
+    label {
+  margin: 0;
+  text-transform: uppercase;
+  input[type=submit] {
+    width: 100%;
+    background: linear-gradient(90deg, rgba(243,212,87,1) 0%, rgba(255,223,99,1) 100%);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    &:hover {
+      background-color: #45a049;
     }
+  }
+  input[type=email], input[type=password] {
+    width: 100%;
+    height: 30px;
+    padding-top: 0;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 0;
+    border-bottom: 1px solid #c2cad8;
+    border-radius: 0;
+    background: none;
+    color: white;
+    &:focus {
+      box-shadow: none;
+      outline: none;
+    }
+  }
+  .forgotp, .createAccount {
+    text-transform: uppercase;
+    float: right;
+    font-size: 10px;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+}
+  }
   }
 }
 
-@media (max-width: 1365px) {
-  .user-login {
-    .login-logo {
-      top: 40px;
-      left: 40px;
-    }
-
-    .login-container {
-      > .login-content {
-        padding: 0 40px;
-      }
-    }
-  }
-}
-
-@media (max-width: 1023px) {
-  .user-login {
-    min-height: 50vh;
-
-    .login-bg {
-      min-height: 50vh;
-    }
-
-    .login-logo {
-      position: relative;
-      margin: 0 0 40px 0;
-    }
-
-    .login-container {
-      min-height: 50vh;
-
-      > .login-content {
-        margin-top: 60px;
-
-        .login-form {
-          margin-top: 40px;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 640px) {
-  .user-login .login-container > .login-content .text-right {
-    text-align: left;
-  }
-}
-
-.login-bg {
-  background-image: url(../../images/login-background.jpeg);
-}
